--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -15,5 +15,11 @@
   <%= @recipe.rating %>
 </p>
 
+<% @recipe.reviews.each do |review| %>
+  <p><%= review.content %></p>
+  <hr>
+<% end %>
+
 <%= link_to 'Edit', edit_recipe_path(@recipe) %> |
-<%= link_to 'Back', recipes_path %>
+<%= link_to 'Back', recipes_path %> |
+<%= link_to 'Add a Review', new_recipe_review_path(@recipe) %>
