Add the Destroy Method

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -17,6 +17,7 @@
 
 <% @recipe.reviews.each do |review| %>
   <p><%= review.content %></p>
+  <%= link_to 'Delete Review', review_path(review), method: :delete %>
   <hr>
 <% end %>
 
