--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,6 +1,8 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Recipes</h1>
+<h1>Cook Now</h1>
+<h2>Boas vindas ao sistema de gestão de refeições!</h2>
+<hr>
+<h3>Recipes</h3>
 
 <table>
   <thead>
